--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body{
     margin: 0 auto;
     border: 1px solid black;
     border-radius: 2%;
-    width: 50%;
+    width: 60%;
     height: 100%;
     background-color: aqua;
 }
@@ -26,4 +26,7 @@ a{
     width: 100%;
     color: black;
     text-decoration: none;
+}
+button{
+    margin-bottom: 10px;
 }
